# insightblog

./: .env.sample  .gitignore  README.md  docker-compose.yml  migrate.py  pyproject.toml  reset_schema.py
alembic/: env.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  content.py  feed.py  posts.py  users.py  websocket.py
app/core/: config.py  context.py  logging.py  redis.py
app/db/: init_db.py  seed.py  session.py
app/middlwares/: logger.py
app/models/: blog.py  domain.py  user.py
app/schemas/: common.py  user.py
app/services/: auth.py  embedding.py  feed.py  otp.py  redis_service.py  vespa_app.py
app/tests/: conftest.py  test_auth.py  test_web.py
app/utils/: upload_helper.py
app/web/: notification_routes.py  post_routes.py  profile_routes.py  routes.py
static/css/: styles.css
static/js/: auth.js  notifications.js
templates/: base.html  create_post.html  dashboard.html  forgot_password.html  login.html  notifications.html  post_view.html  profile.html  register.html  reset_password.html  user_profile.html
