[project]
name = "insightblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "redis",
    "pyvespa",
    "openai",
    "python-dotenv",
    "sqlmodel",
    "asyncpg",
    "alembic",
    "passlib[argon2]",
    "python-jose[cryptography]",
    "loguru",
    "python-multipart",
    "pytest",
    "httpx",
    "pytest-asyncio",
    "aioredis>=2.0.1",
]
